--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = names_matcher
+name = name_compare
 version = 0.0.1
 author = Moshe Munk
 author_email = moshe.munk@mail.huji.ac.il
