Prepare for installing.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = name_compare
+name = namecompare
 version = 0.0.1
 author = Moshe Munk
 author_email = moshe.munk@mail.huji.ac.il
